--- a/api/voip/BUILD.gn
+++ b/api/voip/BUILD.gn
@@ -1,10 +1,10 @@
-#Copyright(c) 2020 The WebRTC project authors.All Rights Reserved.
+# Copyright(c) 2020 The WebRTC project authors.All Rights Reserved.
 #
-#Use of this source code is governed by a BSD - style license
-#that can be found in the LICENSE file in the root of the source
-#tree.An additional intellectual property rights grant can be found
-#in the file PATENTS.All contributing project authors may
-#be found in the AUTHORS file in the root of the source tree.
+# Use of this source code is governed by a BSD - style license
+# that can be found in the LICENSE file in the root of the source
+# tree.An additional intellectual property rights grant can be found
+# in the file PATENTS.All contributing project authors may
+# be found in the AUTHORS file in the root of the source tree.
 
 import("../../webrtc.gni")
 
@@ -21,4 +21,40 @@ rtc_source_set("voip_api") {
     "../audio_codecs:audio_codecs_api",
     "//third_party/abseil-cpp/absl/types:optional",
   ]
+}
+
+rtc_library("voip_builder_api") {
+  visibility = [ "*" ]
+  allow_poison = [ "default_task_queue" ]
+  sources = [
+    "voip_engine_builder.cc",
+    "voip_engine_builder.h",
+  ]
+  deps = [
+    ":voip_api",
+    "..:scoped_refptr",
+    "../../audio/voip:voip_core",
+    "../../modules/audio_device:audio_device_api",
+    "../../modules/audio_processing:api",
+    "../../rtc_base:logging",
+    "../audio_codecs:audio_codecs_api",
+    "../task_queue",
+    "../task_queue:default_task_queue_factory",
+  ]
+}
+
+if (rtc_include_tests) {
+  rtc_library("voip_engine_builder_unittests") {
+    testonly = true
+    sources = [ "voip_engine_builder_unittest.cc" ]
+    deps = [
+      ":voip_builder_api",
+      "../../modules/audio_device:mock_audio_device",
+      "../../modules/audio_processing:mocks",
+      "../../rtc_base:logging",
+      "../../test:audio_codec_mocks",
+      "../../test:test_support",
+      "../task_queue:task_queue",
+    ]
+  }
 }
