--- a/common_audio/BUILD.gn
+++ b/common_audio/BUILD.gn
@@ -56,7 +56,7 @@ rtc_library("common_audio") {
     "../system_wrappers",
     "../system_wrappers:cpu_features_api",
     "third_party/ooura:fft_size_256",
-    "//third_party/abseil-cpp/absl/types:optional",
+    "//third_party/abseil-cpp:absl",
   ]
 
   defines = []
