--- a/audio/voip/BUILD.gn
+++ b/audio/voip/BUILD.gn
@@ -8,28 +8,75 @@
 
 import("../../webrtc.gni")
 
+rtc_library("voip_core") {
+  sources = [
+    "voip_core.cc",
+    "voip_core.h",
+  ]
+  deps = [
+    ":audio_channel",
+    "//api:scoped_refptr",
+    "//api/audio_codecs:audio_codecs_api",
+    "//api/task_queue",
+    "//api/voip:voip_api",
+    "//audio",
+    "//modules/audio_device:audio_device_api",
+    "//modules/audio_mixer:audio_mixer_impl",
+    "//modules/audio_processing:api",
+    "//modules/utility:utility",
+    "//rtc_base:checks",
+    "//rtc_base:criticalsection",
+    "//rtc_base:logging",
+    "//third_party/abseil-cpp/absl/types:optional",
+  ]
+}
+
+rtc_library("audio_channel") {
+  sources = [
+    "audio_channel.cc",
+    "audio_channel.h",
+  ]
+  deps = [
+    ":audio_egress",
+    ":audio_ingress",
+    "//api:transport_api",
+    "//api/audio_codecs:audio_codecs_api",
+    "//api/task_queue",
+    "//api/voip:voip_api",
+    "//modules/audio_device:audio_device_api",
+    "//modules/rtp_rtcp",
+    "//modules/rtp_rtcp:rtp_rtcp_format",
+    "//modules/utility",
+    "//rtc_base:checks",
+    "//rtc_base:criticalsection",
+    "//rtc_base:logging",
+    "//rtc_base:macromagic",
+    "//rtc_base:rtc_base_approved",
+  ]
+}
+
 rtc_library("audio_ingress") {
   sources = [
     "audio_ingress.cc",
     "audio_ingress.h",
   ]
   deps = [
-    "../../api:array_view",
-    "../../api:rtp_headers",
-    "../../api:scoped_refptr",
-    "../../api:transport_api",
-    "../../api/audio:audio_mixer_api",
-    "../../api/audio_codecs:audio_codecs_api",
-    "../../audio",
-    "../../audio/utility:audio_frame_operations",
-    "../../modules/audio_coding",
-    "../../modules/rtp_rtcp",
-    "../../modules/rtp_rtcp:rtp_rtcp_format",
-    "../../modules/utility",
-    "../../rtc_base:criticalsection",
-    "../../rtc_base:logging",
-    "../../rtc_base:safe_minmax",
-    "../../rtc_base:timeutils",
+    "//api:array_view",
+    "//api:rtp_headers",
+    "//api:scoped_refptr",
+    "//api:transport_api",
+    "//api/audio:audio_mixer_api",
+    "//api/audio_codecs:audio_codecs_api",
+    "//audio",
+    "//audio/utility:audio_frame_operations",
+    "//modules/audio_coding",
+    "//modules/rtp_rtcp",
+    "//modules/rtp_rtcp:rtp_rtcp_format",
+    "//modules/utility",
+    "//rtc_base:criticalsection",
+    "//rtc_base:logging",
+    "//rtc_base:safe_minmax",
+    "//rtc_base:timeutils",
   ]
 }
 
@@ -39,17 +86,17 @@ rtc_library("audio_egress") {
     "audio_egress.h",
   ]
   deps = [
-    "../../api/audio_codecs:audio_codecs_api",
-    "../../api/task_queue",
-    "../../audio",
-    "../../audio/utility:audio_frame_operations",
-    "../../call:audio_sender_interface",
-    "../../modules/audio_coding",
-    "../../modules/rtp_rtcp",
-    "../../modules/rtp_rtcp:rtp_rtcp_format",
-    "../../rtc_base:logging",
-    "../../rtc_base:rtc_task_queue",
-    "../../rtc_base:thread_checker",
-    "../../rtc_base:timeutils",
+    "//api/audio_codecs:audio_codecs_api",
+    "//api/task_queue",
+    "//audio",
+    "//audio/utility:audio_frame_operations",
+    "//call:audio_sender_interface",
+    "//modules/audio_coding",
+    "//modules/rtp_rtcp",
+    "//modules/rtp_rtcp:rtp_rtcp_format",
+    "//rtc_base:logging",
+    "//rtc_base:rtc_task_queue",
+    "//rtc_base:thread_checker",
+    "//rtc_base:timeutils",
   ]
 }
