--- a/test/fuzzers/BUILD.gn
+++ b/test/fuzzers/BUILD.gn
@@ -373,7 +373,8 @@ webrtc_fuzzer_test("neteq_signal_fuzzer") {
 webrtc_fuzzer_test("residual_echo_detector_fuzzer") {
   sources = [ "residual_echo_detector_fuzzer.cc" ]
   deps = [
-    "../../modules/audio_processing",
+    "../../api/audio:residual_echo_detector",
+    "../../modules/audio_processing:api",
     "../../rtc_base:checks",
     "../../rtc_base:rtc_base_approved",
   ]
