--- a/modules/remote_bitrate_estimator/BUILD.gn
+++ b/modules/remote_bitrate_estimator/BUILD.gn
@@ -13,6 +13,8 @@ rtc_library("remote_bitrate_estimator") {
     "aimd_rate_control.cc",
     "aimd_rate_control.h",
     "bwe_defines.cc",
+    "congestion_control_feedback_generator.cc",
+    "congestion_control_feedback_generator.h",
     "include/bwe_defines.h",
     "include/remote_bitrate_estimator.h",
     "inter_arrival.cc",
@@ -36,6 +38,7 @@ rtc_library("remote_bitrate_estimator") {
   deps = [
     "../../api:field_trials_view",
     "../../api:rtp_headers",
+    "../../api:sequence_checker",
     "../../api/environment",
     "../../api/transport:bandwidth_usage",
     "../../api/transport:network_control",
@@ -54,6 +57,7 @@ rtc_library("remote_bitrate_estimator") {
     "../../rtc_base:safe_minmax",
     "../../rtc_base:stringutils",
     "../../rtc_base/experiments:field_trial_parser",
+    "../../rtc_base/network:ecn_marking",
     "../../rtc_base/synchronization:mutex",
     "../../system_wrappers",
     "../../system_wrappers:metrics",
@@ -105,6 +109,7 @@ if (rtc_include_tests) {
 
     sources = [
       "aimd_rate_control_unittest.cc",
+      "congestion_control_feedback_generator_unittest.cc",
       "inter_arrival_unittest.cc",
       "overuse_detector_unittest.cc",
       "packet_arrival_map_test.cc",
@@ -125,7 +130,9 @@ if (rtc_include_tests) {
       "../../api/units:time_delta",
       "../../api/units:timestamp",
       "../../rtc_base:checks",
+      "../../rtc_base:logging",
       "../../rtc_base:random",
+      "../../rtc_base/network:ecn_marking",
       "../../system_wrappers",
       "../../test:explicit_key_value_config",
       "../../test:fileutils",
